# django-superset-integration

./: README.md  README.rst  pyproject.toml
.github/workflows/: publish.yml
django_superset_integration/: admin.py  fetch_superset_guest_token.py  forms.py  models.py  urls.py  utils.py
django_superset_integration.egg-info/: PKG-INFO  SOURCES.txt
django_superset_integration/migrations/: 0001_initial.py  0002_add_app_name_to_supersetdashboard.py
django_superset_integration/static/django_superset_integration/js/: display-dashboard.js
django_superset_integration/templates/django_superset_integration/: superset-integration.html
