[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-superset-integration"
version = "0.1.0"
description = "A Django app to integrate Apache Superset dashboards into a Django application"
authors = [
    {name = "Alica Burlot",email = "alica.burlot@developpement-durable.gouv.fr"}
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
]
